# LayersTemplate

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md
.cache/clangd/index/: Application.cpp.F57555453D2189A9.idx  Application.h.AA0EF3EDCDC1E20B.idx  CursorWindowEvent.cpp.E7A805BC0ED1F69F.idx  CursorWindowEvent.h.318DDD9320FE7BDB.idx  DebugLayer.cpp.DBA4EFA407E3D1F2.idx  DebugLayer.h.EA1D4668E9C5C755.idx  Event.cpp.C1C92AF7FAFBA3BA.idx  Event.h.2F0840FCE45324A2.idx  InputThread.cpp.9614BB923E977B54.idx  InputThread.h.AD51908314C250AB.idx  KeyEvent.cpp.6D59AADCE0B088AD.idx  KeyEvent.h.ECCD4C88C12CCC77.idx  Layer.h.8F813E4C7F0A840C.idx  MainLayer.cpp.DFAE48C5FF482F54.idx  MainLayer.h.31E747D4C7299628.idx  MouseButtonEvent.cpp.E44407D526BC7DB9.idx  MouseButtonEvent.h.141D893F4219FF09.idx  RenderingThread.cpp.0B012C005857D9EB.idx  RenderingThread.h.34CBDF3B2097E8D4.idx  ScrollEvent.cpp.25AA508048C5FC6F.idx  ScrollEvent.h.E3F657E9EB7B7A8C.idx  StatisticsLayer.cpp.28DA2AE4DD7A7DC8.idx  StatisticsLayer.h.05D52FBD8A1ECDE1.idx  ThreadManager.cpp.6BA890DBCD9EE8BA.idx  ThreadManager.h.3E9BD6B48C15C3CB.idx  UpdateThread.cpp.A25F95A45C55B2A9.idx  UpdateThread.h.658275B3ABCD1D6B.idx  Window.cpp.886AC1BFA79EFDD6.idx  Window.h.76187C2EF13ECA76.idx  eventsSetup.cpp.372E910DE197C8D5.idx  eventsSetup.h.C90591BF548FFDD7.idx  main.cpp.8ACFDF1289BE4223.idx
app/: CMakeLists.txt  Dependencies.cmake  main.cpp
app/shaders/BaseLayer/: triangles.frag
app/src/: BaseLayer.cpp  BaseLayer.h  main.cpp
app/src/example/: BaseLayer.cpp  BaseLayer.h  SecondaryLayer.cpp  SecondaryLayer.h
cmake/: dependencies.cmake
core/: CMakeLists.txt  Dependencies.cmake
core/src/: Application.cpp  Application.h  Event.h  EventQueue.h  FilePaths.cpp  FilePaths.h  Layer.cpp  Layer.h  LogicThread.cpp  LogicThread.h  LogicThreadManager.cpp  LogicThreadManager.h  Physics.cpp  Physics.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  Window.cpp  Window.h
core/src/Events/: CursorWindowEvent.cpp  CursorWindowEvent.h  Event.h  KeyEvent.cpp  KeyEvent.h  MouseButtonEvent.cpp  MouseButtonEvent.h  MousePositionEvent.cpp  MousePositionEvent.h  ScrollEvent.cpp  ScrollEvent.h  eventsSetup.cpp  eventsSetup.h
core/src/Inputs/: inputSetup.cpp  inputSetup.h
core/src/Threads/: InputThread.cpp  InputThread.h  RenderingThread.cpp  RenderingThread.h  ThreadManager.cpp  ThreadManager.h  UpdateThread.cpp  UpdateThread.h
core/src/utility/: Shaders.cpp  Shaders.h  TextRenderer.cpp  TextRenderer.h  fileReading.cpp  fileReading.h  shaderLoader.cpp  shaderLoader.h
example/: CMakeLists.txt  Dependencies.cmake  Dimensions.md  README.md  TODO.md
example/assets/cars/default/: car.blend  car.blend1  car.glb  car.mtl
example/assets/world/: world.mtl
example/assets/worlds/world/: world.mtl
example/assets/worlds/world2/: world.blend  world.blend1  world.mtl
example/assets/worlds/world3/: Untitled.blend  Untitled.blend1  Untitled.mtl
example/shaders/: mvp.frag  mvp.vert  passthrough.frag  passthrough.vert  red.frag
example/shaders/example/: passthrough.vert
example/src/: BaseLayer.h  Car.cpp  Car.h  SecondaryLayer.cpp  SecondaryLayer.h  Vehicle.h  main.cpp
example/src/Layers/: DebugLayer.cpp  DebugLayer.h  MainLayer.cpp  MainLayer.h  StatisticsLayer.cpp  StatisticsLayer.h
